module learning_scalaz added; sbt settings

--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -1,2 +1,30 @@
-version = "2.0.0-RC4"
-maxColumn = 150
+version = "2.2.2"
+
+maxColumn = 120
+align = most
+docstrings = "JavaDoc"
+align.openParenCallSite = true
+align.openParenDefnSite = true
+newlines.alwaysBeforeTopLevelStatements = true
+newlines.alwaysBeforeElseAfterCurlyIf = false 
+lineEndings = preserve
+
+rewrite.rules = [ExpandImportSelectors, RedundantBraces]
+rewrite.redundantBraces.stringInterpolation = true
+
+#waiting for new version of IDEA scalafmt plugin
+#verticalMultiline.atDefnSite = true
+#verticalMultiline.arityThreshold = 3
+#verticalMultiline.newlineAfterOpenParen = true
+#verticalMultiline.newlineBeforeImplicitKW = true
+
+rewrite.sortModifiers.order = [
+  "`implicit`"
+  "`final`"
+  "`sealed`"
+  "`abstract`"
+  "`override`"
+  "`private`"
+  "`protected`"
+  "`lazy`"
+]
